@@ -1,3 +1,9 @@
+2023-12-20T20:06:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7280259937 # 4384
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-20
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 2948 / 0 2949 / +0 +1
+
 2023-12-20T16:06:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7277897055 # 4383
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-20
